@startuml Diagrama de Classes
!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Container.puml

class Cliente {
    - id: int
    - nome: String
    - telefone: String
    - email: String
    - rua: String
    - numero: int
    - complemento: String
    - bairro: String
    - cidade: String
    - estado: String
    - pais: String
    + adicionar()
    + remover()
    + alterar()
    + agendarServico()
    + cancelarAgendamento()
    + visualizarHistorico()
}

class Funcionario {
    - id: int
    - nome: String
    - telefone: String
    - email: String
    - rua: String
    - numero: int
    - complemento: String
    - bairro: String
    - cidade: String
    - estado: String
    - pais: String
    - cargo: String
    - salario: double
    + adicionar()
    + remover()
    + alterar()
    + atenderCliente()
    + registrarServico()
    + gerarRelatorio()
}

class Produto {
    - id: int
    - nome: String
    - descricao: String
    - preco: double
    - quantidade: int
    + adicionar()
    + remover()
    + alterar()
}

class Agendamento {
    - id: int
    - cliente: Cliente
    - funcionarios: List<Funcionario>
    - servico: List<Servicos>
    - data: Date
    - horario: String
    + confirmar()
    + reagendar()
    + cancelar()
}

class TransacaoFinanceira {
    - id: int
    - tipo: String
    - valor: double
    - data: Date
    + registrar()
}

class Avaliacao {
    - id: int
    - cliente: Cliente
    - servico: Servico
    - estrelas: int
    - comentario: String
    - dataAtendimento: Date
    + registrar()
}

class Servico {
    - id: int
    - nome: String
    - descricao: String
    - duracao: int
    - preco: double
    + adicionar()
    + adicionarProduto()
    + remover()
    + alterar()
}

class Relatorio {
    - id: int
    - tipo: String
    - dataGeracao: Date
    - conteudo: String
    + gerar()
    + exportarPDF()
    + exportarExcel()
}

class Despesa {
    - id: int
    - descricao: String
    - valor: double
    - data: Date
    + registrarDespesa()
}

class HorarioTrabalho {
    - id: int
    - funcionario: Funcionario
    - diaSemana: String
    - horarioInicio: Time
    - horarioFim: Time
}

class Promocao {
    - id: int
    - servico: Servico
    - descricao: String
    - desconto: double
    - dataInicio: Date
    - dataFim: Date
}

Cliente "1" -- "1" Agendamento
Funcionario "N" -- "1" Agendamento
Servico "1" -- "N" Agendamento
Servico "1" -- "N" Produto
Agendamento "1" -- "1" TransacaoFinanceira
Agendamento "1" -- "1" Avaliacao
TransacaoFinanceira "N" -- "N" Relatorio
Avaliacao "N" -- "N" Relatorio
Despesa "1" -- "1" TransacaoFinanceira
HorarioTrabalho "N" -- "1" Funcionario
Promocao "1" -- "1" Servico

@enduml